layout11 full-bleed layout with fixed-width

--- a/layout11-full-bleed layout with fixed-width content/style.css
+++ b/layout11-full-bleed layout with fixed-width content/style.css
@@ -48,3 +48,14 @@ img {
   margin-top: -1em;
 	margin-bottom: 3em;
 }
+
+@media screen and (min-width: 600px) {
+	.grid {
+		display: grid;
+		grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+	}
+
+	.splash-content {
+		grid-column: 2/4;
+	}
+}
